test/visibility/only/hidesCorrectFunction.good
hidesCorrectFunction.chpl:15: In function 'main':
hidesCorrectFunction.chpl:16: error: unresolved call 'foo()'
hidesCorrectFunction.chpl:16: note: because no functions named foo found in scope
